PR port-amd64/39964 modules/compat_linux: missing symbols on amd64